--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
         <div class="messages"></div>
         <textarea name="message" id="message" cols="90" rows="5"
                   placeholder="Enter your message..."></textarea><br/><br/>
-        <input type="button" id="enviar-message" data-username="" value="Enviar Mensagem">&nbsp;
+        <input type="button" id="enviar-mensagem" data-username="" value="Enviar Mensagem">&nbsp;
         <input type="button" id="sair-chat" data-username="" value="Sair da Sala">
     </div>
 </div>
